2009-09-07  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Fix editing menu records in the menu rights multiform.

2009-09-04  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Update subactions check in genmenu.

2009-09-04  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Bind c_pytis_menu_actions to ev_pytis_menu_structure by fullname, not shortname.

2009-09-04  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Generate menu subforms for all dual forms and only for dual forms.

2009-09-04  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* tools/genmenu.py:
	Initial support for subform titles.

2009-09-03  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Fixes in menu editing.

2009-09-03  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Improvements of the menu position selection form.

2009-09-03  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix computing ev_pytis_menu positions.

2009-09-03  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fixes in menu items movement in the menu editing form.

2009-09-02  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Make CodebookForm a successor of FoldableForm.

2009-09-02  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Fix menu title editing.

2009-09-02  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/evaction.py:
	Add question mark to identifier characters in evaction parsing.

2009-09-01  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Column `description' added to menu rights editing.

2009-09-01  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	* lib/pytis/form/list.py:
	Set default sorting after sorting is set to empty in FoldableForm.

2009-09-01  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Fix initial sorting for non-foldable forms in FoldableForm.
